k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: backend
spec:
  type: NodePort
  selector:
    app: python-api
  ports:
  - port: 80
    targetPort: 8000
