k8s/api-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: python-api-netpol
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: python-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
